# nikon-transfer-wifi-dseries

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  build_app.sh  nikon_transfer.py  nikon_transfer.spec  nikon_transfer_gui.py  pyproject.toml
.github/workflows/: sast.yml  tests.yml
assets/: icon.icns  make_icon.py
nikon_transfer/: __init__.py  cli.py  client.py  gui.py  log.py  protocol.py  transfer.py  utils.py
tests/: test_client.py  test_transfer.py  test_utils.py
